force-app/main/default/objects/Enhance_Contact_from_Lead__c/Enhance_Contact_from_Lead__c.object-meta.xml
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <label>Enhance Contact from Lead</label>
</CustomObject>