force-app/main/default/objects/Enhance_Contact_from_Lead__c/fields/Contact_Field_Name__c.field-meta.xml
<CustomField>
    <fullName>Contact_Field_Name__c</fullName>
    <label>Contact Field Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>