force-app/main/default/objects/Enhance_Contact_from_Lead__c/fields/Hide_Field__c.field-meta.xml
<CustomField>
    <fullName>Hide_Field__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Flag to indicate if the field needs to be ignored on the Visualforce page based on the lead Record Type selected</description>
    <label>Hide Field</label>
    <type>Checkbox</type>
</CustomField>