force-app/main/default/objects/Enhance_Contact_from_Lead__c/fields/Lead_Field_Name__c.field-meta.xml
<CustomField>
    <fullName>Lead_Field_Name__c</fullName>
    <label>Lead Field Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>