force-app/main/default/objects/Enhance_Contact_from_Lead__c/fields/Order__c.field-meta.xml
<CustomField>
    <fullName>Order__c</fullName>
    <description>Field Order to be displayed in vfUpdateRelatedContact</description>
    <label>Order</label>
    <precision>10</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
    <unique>true</unique>
</CustomField>